# traducir

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/traducir/: __init__.py  tui.py
