[project]
name = "traducir"
version = "0.1.0"
description = "A TUI Frontend for gdal_translate"
authors = [
    { name = "Nicholas Witthoeft", email = "njwitthoeft@gmail.com" }
]
dependencies = [
    "rich>=13.7.1",
    "typer>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/traducir"]
